Supervisord Tor and Chromium

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,3 +17,25 @@ stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes = 0
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes = 0
+
+[program:tor]
+command=/usr/bin/tor -f /etc/tor/torrc --SocksPort 9050
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=1
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes = 0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes = 0
+
+[program:chromium]
+command=/usr/bin/chromium-browser --headless --disable-gpu --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-dev-shm-usage --disable-translate --disable-extensions --disable-software-rasterizer
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=1
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes = 0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes = 0
