Make tor log quiet

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,7 +19,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes = 0
 
 [program:tor]
-command=/usr/bin/tor -f /etc/tor/torrc --SocksPort 9050
+command=/usr/bin/tor -f /etc/tor/torrc --quiet --SocksPort 9050
 numprocs=1
 autostart=true
 autorestart=true
