--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,35 +7,49 @@ nodaemon=true
 nocleanup=false
 silent=true
 
+[program:dbus]
+command=/usr/bin/dbus-daemon --session
+priority=1
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=1
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
+
 [program:wayback]
 command=/bin/sh -c "set -o pipefail && /bin/sh /entrypoint.sh"
 numprocs=1
 autostart=true
 autorestart=true
 startsecs=1
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes = 0
+stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
 
 [program:tor]
 command=/usr/bin/tor -f /etc/tor/torrc --quiet --SocksPort 9050
+priority=2
 numprocs=1
 autostart=true
 autorestart=true
 startsecs=1
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes = 0
+stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
 
 [program:chromium]
-command=/usr/bin/chromium-browser --headless --disable-gpu --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-dev-shm-usage --disable-translate --disable-extensions --disable-software-rasterizer
+command=/usr/bin/chromium-browser --headless --disable-gpu --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-dev-shm-usage --disable-translate --disable-extensions --disable-software-rasterizer --ignore-certificate-errors --disable-sync --use-fake-ui-for-media-stream --js-flags="--max_old_space_size=%(ENV_GC_MEM)s"
+priority=2
 numprocs=1
 autostart=true
 autorestart=true
 startsecs=1
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes = 0
+stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
