Auto clean old files

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,7 +24,8 @@ command=/bin/sh -c "set -o pipefail && /bin/sh /entrypoint.sh"
 numprocs=1
 autostart=true
 autorestart=true
-startsecs=1
+startsecs=10
+startretries=9999999999999
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
@@ -49,6 +50,18 @@ numprocs=1
 autostart=true
 autorestart=true
 startsecs=1
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
+
+[program:cleaner]
+command=/bin/sh -c 'sleep 60 && set -o pipefail && /bin/sh /cleaner.sh'
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=10
+startretries=9999999999999
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
