--- a/supervisord.conf
+++ b/supervisord.conf
@@ -25,7 +25,7 @@ numprocs=1
 autostart=true
 autorestart=true
 startsecs=10
-startretries=9999999999999
+startretries=2147483647
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
@@ -61,7 +61,7 @@ numprocs=1
 autostart=true
 autorestart=true
 startsecs=10
-startretries=9999999999999
+startretries=2147483647
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
